infra/k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: cinematch
  labels:
    app.kubernetes.io/name: cinematch
